...
    @Environment(\.openWindow) private var openWindow
    private let updaterController = UpdaterController()

    var body: some Scene {
        WindowGroup {
            ContentView()
                .navigationTitle("Amiga Playground")
        }
        .commands {
            CommandGroup(replacing: .appInfo) {
                Button("About Amiga Playground") {
                    openWindow(id: "about")
                }
...
